--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile 'net.dv8tion:JDA:3.8.3_462'
     compile files("lib/JNBT_1.4.jar")
     compile files("lib/mapconverter_0.13.jar")
+    compile files("lib/SimpleCommandSystem.jar")
 }
 
 jar {
